--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,11 +28,11 @@ html, body {
   background: linear-gradient(
     -45deg,
     #00eff8,
-    #f800b4,
-    #ebf503,
-    #02f6c1,
-    #00eff8,
-    #9400f8
+    #afdbd1,
+    #a6ddd1,
+    #a6b3dd,
+    #afdbd1,
+    #00eff8
   );
   background-size: 400% 400%;
   animation: gradient 30s ease infinite;
@@ -170,3 +170,98 @@ button:hover::before {
   opacity: 0;
 }
 
+
+
+.card2 {
+  --main-color: #000;
+  --submain-color: #78858F;
+  --bg-color: #fff;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  position: relative;
+  width: 300px;
+  height: 384px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  background: var(--bg-color);
+}
+
+.card2__img {
+  height: 192px;
+  width: 100%;
+}
+
+.card2__img svg {
+  height: 100%;
+  border-radius: 20px 20px 0 0;
+}
+
+.card2__avatar {
+  position: absolute;
+  width: 114px;
+  height: 114px;
+  background: var(--bg-color);
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: calc(50% - 57px);
+}
+
+.card2__avatar svg {
+  width: 100px;
+  height: 100px;
+}
+
+.card2__title {
+  margin-top: 60px;
+  font-weight: 500;
+  font-size: 18px;
+  color: var(--main-color);
+}
+
+.card2__subtitle {
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 15px;
+  color: var(--submain-color);
+}
+
+.card2__btn {
+  margin-top: 15px;
+  width: 76px;
+  height: 31px;
+  border: 2px solid var(--main-color);
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 11px;
+  color: var(--main-color);
+  background: var(--bg-color);
+  text-transform: uppercase;
+  transition: all 0.3s;
+}
+
+.card2__btn-solid {
+  background: var(--main-color);
+  color: var(--bg-color);
+}
+
+.card2__btn:hover {
+  background: var(--main-color);
+  color: var(--bg-color);
+}
+
+.card2__btn-solid:hover {
+  background: var(--bg-color);
+  color: var(--main-color);
+}
+
+/* centre la carte au milieu de la page */
+.center-page {
+  display: flex;
+  align-items: center;       /* centre verticalement */
+  justify-content: center;   /* centre horizontalement */
+  min-height: 60vh;          /* hauteur minimale pour le centrage vertical */
+  padding: 20px;             /* espace autour sur petits écrans */
+}
